2008-01-13  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update kdelibs, kdesupport, kleopatra.

	* src/inst-kdelibs.nsi: Update to latest version.
	* src/inst-kdesupport.nsi: Update to latest version.
	* src/uninst-kdesupport.nsi: Update to latest version.
	* src/inst-kleopatra.nsi: Update to latest version.

	* src/inst-gnupg2.nsi: Fix last change.
	* src/uninst-gnupg2.nsi: Uninstall gpgconf-conf.skel.

	* src/uninst-qt.nsi: Uninstall qsqlited4.dll.

2008-01-10  Marcus Brinkmann  <marcus@g10code.de>

	* src/gpg4win.nsi: New variable bpdir.
	* src/gpg4win-src.nsi: Likewise.
	* src/inst-gnupg2.nsi: New variable source and install a skeleton
	file for gpgconf.conf.

2008-01-08  Marcus Brinkmann  <marcus@g10code.de>

	* src/pkg-to-nsi.pl: New file.

	* src/inst-kleopatra.nsi: Add missing files.
	* src/uninst-kleopatra.nsi: Likewise.

2008-01-07  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update to 0.0.0-svn46.

2008-01-04  Marcus Brinkmann  <marcus@g10code.de>

	* src/inst-kleopatra.nsi, src/uninst-kleopatra.nsi,
	src/inst-oxygen-icons.nsi: Update to new version.
	* packages/packages.current: Update oxygen-icons and kleopatra.

	* packages/packages.current: Update gpgme to 1.1.6.

	* patches/gpgme/01-gpg2.patch: Update patch.

2008-01-03  Werner Koch  <wk@g10code.com>

	* src/inst-gnupg.nsi: Do not set gpgProgram but delete it.

	* patches/gpgme/01-gpg2.patch: New.
	* Makefile.am (EXTRA_DIST): Add it.

	* src/gpg4win.mk.in (SETVARS): Add new var PKGPBDIR.
	(SPKG_template) <stamps/stamp-$(1)-01-patch>: Allow for patches
	without the version name of the package.
	(MPKG_template) <stamps/stamp-$(1)-01-patch>: Ditto.

	* packages/packages.current: Fix pinentry name.  Use gpgol svn 205.
	Update to gnupg 1.48 and 2.0.8.

2008-01-02  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update pinentry to 0.7.5-cvs.

	* src/pkg-config (PREFIX): Suppress debug output.
