@@ -1,3 +1,7 @@
+2008-01-15  Marcus Brinkmann  <marcus@g10code.de>
+
+	* src/g4wihelp.c (service_create): Use LocalSystem for now.
+
 2008-01-13  Marcus Brinkmann  <marcus@g10code.de>
 
 	* packages/packages.current: Update kdelibs, kdesupport, kleopatra.
